@@ -36,7 +36,8 @@ cimport pyfmi.fmil3_import as FMIL3
 cimport pyfmi.fmi3 as FMI3
 from pyfmi.fmi3 import (
     FMI3_Causality,
-    FMI3_Type
+    FMI3_Type,
+    FMI3_Variability
 )
 from pyfmi.exceptions import (
     FMUException,
@@ -87,6 +88,13 @@ cdef class FMIODE3(cExplicit_Problem):
         # If there is no state in the model, add a dummy state der(y)=0
         if f_nbr == 0:
             self.y0 = np.array([0.0])
+
+        self._vrefs32_nostate_eval = None
+        self._vrefs64_nostate_eval = None
+        if f_nbr == 0 and self.model_me3_instance:
+            continuous_vars = model.get_model_variables(variability = FMI3_Variability.CONTINUOUS)
+            self._vrefs32_nostate_eval = [v.value_reference for v in continuous_vars.values() if v.type is FMI3_Type.FLOAT32]
+            self._vrefs64_nostate_eval = [v.value_reference for v in continuous_vars.values() if v.type is FMI3_Type.FLOAT64]
 
         # Determine the result file name
         if result_file_name == '':
@@ -252,9 +260,16 @@ cdef class FMIODE3(cExplicit_Problem):
             except FMUException:
                 raise AssimuloRecoverableError
 
-        # If there is no state, use the dummy
         if self._f_nbr == 0:
-            der = np.array([0.0])
+            der = np.array([0.0]) # If there is no state, use the dummy
+            # call 'get_*' to trigger re-computations, since _get_derivatives will(may) not
+            try:
+                if self._vrefs32_nostate_eval:
+                    self.model_me3.get_float32(self._vrefs32_nostate_eval)
+                if self._vrefs64_nostate_eval:
+                    self.model_me3.get_float64(self._vrefs64_nostate_eval)
+            except FMUException as e:
+                raise AssimuloRecoverableError
 
         if self._extra_f_nbr > 0:
             der = np.append(der, self._extra_equations.rhs(y_extra))
